# osgearth-android

./: CMakeLists.txt  README.md  buildOSGEarthAndroid.sh
AutoGenShaders/src/osgEarth/: AutoGenShaders.cpp
AutoGenShaders/src/osgEarthDrivers/engine_mp/: AutoGenShaders.cpp
AutoGenShaders/src/osgEarthDrivers/sky_simple/: AutoGenShaders.cpp
AutoGenShaders/src/osgEarthExtensions/bumpmap/: AutoGenShaders.cpp
AutoGenShaders/src/osgEarthExtensions/normalmap/: AutoGenShaders.cpp
AutoGenShaders/src/osgEarthExtensions/splat/: AutoGenShaders.cpp
AutoGenShaders/src/osgEarthUtil/: AutoGenShaders.cpp
CMakeModules/: FindAndroidNDK.cmake  ModuleInstall.cmake  OsgEarthAndroidMacroUtils.cmake  OsgEarthMacroUtils.cmake
PlatformSpecifics/Android/: Android.mk.master.in  AndroidManifest.xml.master.in
src/: CMakeLists.txt
src/osgEarth/: AndroidCapabilities  AndroidCapabilities.cpp  CMakeLists.txt  Capabilities
src/osgEarthAnnotation/: CMakeLists.txt
src/osgEarthDrivers/: CMakeLists.txt
src/osgEarthFeatures/: CMakeLists.txt
src/osgEarthSymbology/: CMakeLists.txt
src/osgEarthUtil/: CMakeLists.txt
